[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/levels/cave_in_lead.gd" type="Script" id=1]

[node name="CaveIn" type="Node2D"]
script = ExtResource( 1 )

[node name="DelayTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="DelayTimer" to="." method="_on_DelayTimer_timeout"]
